--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
   <body>
     <%- include ("partials/nav") %>
     <main style="padding: 3rem">
-      <div class="row">
+      <!-- <div class="row">
         <div ass="col-md-12">
           <a
             class="btn btn-lg btn-google"
@@ -25,37 +25,36 @@
         </div>
       </div> 
       <br />
-      <h4>Or... you have an account. Login here:</h2>
-      <form  action="/auth/login" method="POST">
+      <h4>Or... you have an account. Login here:</h2> -->
+      <form action="/auth/login" method="POST">
         <%- include ("partials/message") %>
         <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
+          <label for="exampleInputEmail1">Email</label>
           <input
             type="email"
             class="form-control"
             id="exampleInputEmail1"
             aria-describedby="emailHelp"
-            placeholder="Enter email"
+            placeholder="輸入email"
             name="username"
           />
           <small id="emailHelp" class="form-text text-muted"
-            >We'll never share your email with anyone else.</small
+            >我們絕對不會與任何第三方分享您的電子郵件</small
           >
         </div>
         <br />
         <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
+          <label for="exampleInputPassword1">密碼</label>
           <input
             type="password"
             class="form-control"
             id="exampleInputPassword1"
-            placeholder="Password"
+            placeholder="輸入密碼"
             name="password"
           />
         </div>
         <br />
-        <button class="btn btn-primary">Submit</button>
-        
+        <button class="btn btn-primary">登入</button>
       </form>
     </main>
   </body>
