--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -31,7 +31,7 @@
           <a class="nav-link" href="/profile">帳號</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/profile/post">New Post</a>
+          <a class="nav-link" href="/profile/post">個人筆記</a>
         </li>
         <% } %>
       </ul>
