--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,21 +2,21 @@
 <html lang="en">
   <head>
     <%- include ("partials/header") %>
-    <title><%= user.name %>'s page</title>
+    <title><%= user.name %> 的個人頁面</title>
   </head>
   <body>
     <%- include ("partials/nav") %>
-    <h1>Welcome to <%= user.name %>'s page.</h1>
+    <h1>歡迎來到 <%= user.name %> 的個人頁面</h1>
     <img src="<%= user.thumbnail %>" alt="" />
     <p><%= user.googleID %></p>
-    <p><%= user.date %></p>
+    <p>使用者註冊時間：<%= user.date %></p>
 
     <% if (posts.length > 0) { %> <% for (let i = 0; i < posts.length; i++) { %>
     <div class="card" style="width: 18rem">
       <div class="card-body">
         <h5 class="card-title"><%= posts[i].title %></h5>
         <p class="card-text"><%= posts[i].content %></p>
-        <a href="#" class="btn btn-primary">註冊時間<%= posts[i].date %> </a>
+        <a href="#" class="btn btn-primary">發表時間：<%= posts[i].date %> </a>
       </div>
     </div>
     <% } %> <% } %>
