--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include ("partials/header") %>
-    <title>Login</title>
+    <title>登入</title>
   </head>
   <body>
     <%- include ("partials/nav") %>
