--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include ("partials/header") %>
-    <title>Signup</title>
+    <title>註冊</title>
   </head>
   <body>
     <%- include ("partials/nav") %>
