--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -28,7 +28,7 @@
           <a class="nav-link" href="/auth/logout">登出</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/profile">帳號</a>
+          <a class="nav-link" href="/profile">帳號內容</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/profile/post">個人筆記</a>
