--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
   <head>
-    <%- include ("partials/header") %>
+    <%- include("partials/header") %>
     <title>行政院即時新聞閱讀器</title>
   </head>
   <body>
-    <%- include ("partials/nav") %>
-    <div class="p-5 mb-4 bg-light rounded-3">
-      <!-- <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">
-          Project 5 - Google and Local Login System
+    <%- include("partials/nav") %>
+    <div class="hero-section">
+      <div class="hero-container">
+        <h1 class="hero-title">
+          此為串接行政院全球資訊網 OpenAPI 之極小型專案
         </h1>
-        <p class="col-md-8 fs-4">
-          Project 5 includes EJS, MongoDB Atlas, Passport.js, Authentication,
-          OAuth(Google Login Setup) and other examples.
-        </p>
-        <button class="btn btn-primary btn-lg" type="button">
-          Learn how it works.
-        </button>
-      </div> -->
+        <p class="hero-desc">- N. Hsu 2025/05</p>
+        <a
+          class="hero-btn"
+          href="https://github.com/noelnoelme/ExecutiveYuanNews-Reader-Project"
+          target="_blank"
+          >於 GitHub 了解如何運作</a
+        >
+      </div>
     </div>
   </body>
 </html>
