--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,60 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
   <head>
     <%- include ("partials/header") %>
     <title>登入</title>
   </head>
   <body>
     <%- include ("partials/nav") %>
-    <main style="padding: 3rem">
-      <!-- <div class="row">
-        <div ass="col-md-12">
-          <a
-            class="btn btn-lg btn-google"
-            style="
-              padding: 0.2rem 0.5rem;
-              background-color: rgb(7, 7, 7);
-              color: rgb(255, 255, 255);
-            "
-            href="/auth/google"
-            ><img
-              src="https://img.icons8.com/color/16/000000/google-logo.png"
-            />
-            Login with Google</a
-          >
-        </div>
-      </div> 
-      <br />
-      <h4>Or... you have an account. Login here:</h2> -->
-      <form action="/auth/login" method="POST">
+    <main class="login-main">
+      <form action="/auth/login" method="POST" class="login-form">
         <%- include ("partials/message") %>
-        <div class="form-group">
+        <div class="form-row">
           <label for="exampleInputEmail1">Email</label>
           <input
             type="email"
-            class="form-control"
+            class="input"
             id="exampleInputEmail1"
-            aria-describedby="emailHelp"
             placeholder="輸入email"
             name="username"
+            required
           />
-          <small id="emailHelp" class="form-text text-muted"
-            >我們絕對不會與任何第三方分享您的電子郵件</small
-          >
+          <small class="note">我們絕對不會與任何第三方分享您的電子郵件</small>
         </div>
-        <br />
-        <div class="form-group">
+        <div class="form-row">
           <label for="exampleInputPassword1">密碼</label>
           <input
             type="password"
-            class="form-control"
+            class="input"
             id="exampleInputPassword1"
             placeholder="輸入密碼"
             name="password"
+            required
           />
         </div>
-        <br />
-        <button class="btn btn-primary">登入</button>
+        <button class="btn-main" type="submit">登入</button>
       </form>
     </main>
   </body>
