調整顏色(眼睛不要那麼痛)。

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -26,6 +26,7 @@
             id="exampleforContent"
             name="content"
             rows="6"
+            placeholder="注意! 此為公開專案，請勿留下個人敏感資訊或是不雅字眼。"
             required
           ></textarea>
         </div>
