--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -40,9 +40,9 @@ body {
 }
 
 .font-btn.active {
-  background: #007bff;
+  background: #111111;
   color: white;
-  border-color: #007bff;
+  border-color: #111111;
 }
 
 .navbar {
@@ -149,7 +149,7 @@ body {
 
 .hero-btn {
   display: inline-block;
-  background: #007bff;
+  background: #2c6591c8;
   color: #fff;
   font-size: 1.15rem;
   padding: 0.9rem 2.2rem;
@@ -161,7 +161,7 @@ body {
 }
 
 .hero-btn:hover {
-  background: #0056b3;
+  background: #2c6591;
 }
 
 .login-main {
@@ -199,7 +199,7 @@ body {
 }
 
 .input:focus {
-  border: 1.5px solid #007bff;
+  border: 1.5px solid #2c6591;
   outline: none;
 }
 
@@ -210,7 +210,7 @@ body {
 }
 
 .btn-main {
-  background: #007bff;
+  background: #2c6591;
   color: #fff;
   border: none;
   padding: 0.8rem 0;
@@ -223,7 +223,7 @@ body {
 }
 
 .btn-main:hover {
-  background: #0056b3;
+  background: #2c6591;
 }
 
 .signup-main {
@@ -287,7 +287,7 @@ body {
 }
 
 .highlight {
-  color: #007bff;
+  color: #2c6591;
   font-weight: 500;
 }
 
