--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,6 +6,9 @@
 
   <div class="navbar-collapse" id="navbarMenu">
     <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/">首頁</a>
+      </li>
       <% if (!user) { %>
       <li class="nav-item">
         <a class="nav-link" href="/auth/login">登入</a>
