完成文章頁面以及搜尋功能。

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,12 +11,12 @@
         <h1 class="hero-title">
           此為串接行政院全球資訊網 OpenAPI 之極小型專案
         </h1>
-        <p class="hero-desc">- N. Hsu 2025/05</p>
+        <p class="hero-desc">- Noel Hsu 2025/05</p>
         <a
           class="hero-btn"
           href="https://github.com/noelnoelme/ExecutiveYuanNews-Reader-Project"
           target="_blank"
-          >於 GitHub 了解如何運作</a
+          >前往 GitHub 了解本專案</a
         >
       </div>
     </div>
