--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -351,6 +351,12 @@ body {
   color: #888;
 }
 
+.post-author {
+  color: #2c6591;
+  font-size: 0.9rem;
+  margin-right: 1rem;
+}
+
 .note-main {
   min-height: 80vh;
   display: flex;
@@ -373,6 +379,54 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+}
+
+.search-form {
+  display: flex;
+  gap: 0.5rem;
+  padding: 1rem;
+  justify-content: flex-start;
+}
+
+.search-input {
+  padding: 0.5rem 1rem;
+  border: 1px solid #ccc;
+  border-radius: 0.4rem;
+  font-size: 1rem;
+  width: 200px;
+}
+
+.search-btn {
+  padding: 0.5rem 1.2rem;
+  background: #2c6591c8;
+  color: #fff;
+  border: none;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background 0.18s;
+}
+.search-btn:hover {
+  background: #2c6591;
+}
+
+@media (max-width: 600px) {
+  .search-form {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 0.7rem;
+    justify-content: flex-start;
+  }
+
+  .search-input {
+    width: 100%;
+    font-size: 1rem;
+  }
+
+  .search-btn {
+    width: 100%;
+    font-size: 1rem;
+  }
 }
 
 /* RWD */
