即時雨量功能更新及其他加強。

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,13 @@
 <html lang="zh-Hant">
   <head>
     <%- include("partials/header") %>
-    <title>行政院即時新聞閱讀器</title>
+    <title>政府 API 閱讀器</title>
   </head>
   <body>
     <%- include("partials/nav") %>
     <div class="hero-section">
       <div class="hero-container">
-        <h1 class="hero-title">此為串接政府 OpenAPI 之極小型專案</h1>
+        <h1 class="hero-title">此為串接政府OpenAPI之 Side Project</h1>
         <p class="hero-desc">- Noel Hsu 2025/05</p>
         <a
           class="hero-btn"
