--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,3 +2,44 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="/styles/style.css" />
+
+<!-- 傳統 favicon (支援舊版瀏覽器，如 IE) -->
+<link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon" />
+
+<!-- 現代瀏覽器 PNG favicon 支援 -->
+<link
+  rel="icon"
+  type="image/png"
+  sizes="16x16"
+  href="/icons/favicon-16x16.png"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="32x32"
+  href="/icons/favicon-32x32.png"
+/>
+
+<!-- Apple iOS 裝置支援 -->
+<link
+  rel="apple-touch-icon"
+  sizes="180x180"
+  href="/icons/apple-touch-icon.png"
+/>
+
+<!-- Android 與 PWA（漸進式網頁應用）支援 -->
+<link
+  rel="icon"
+  type="image/png"
+  sizes="192x192"
+  href="/icons/android-chrome-192x192.png"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="512x512"
+  href="/icons/android-chrome-512x512.png"
+/>
+
+<!-- 建議 PWA 用 manifest（可選） -->
+<link rel="manifest" href="/manifest.json" />
