--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -27,7 +27,7 @@
         <a class="nav-link" href="/profile">帳號內容</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/profile/post">發表便利貼</a>
+        <a class="nav-link" href="/profile/post">發表文章</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/auth/logout">登出</a>
