--- a/views/post.ejs
+++ b/views/post.ejs
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
   <head>
     <%- include ("partials/header") %>
-    <title>便利貼</title>
+    <title>發表文章</title>
   </head>
   <body>
     <%- include ("partials/nav") %>
