--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,21 @@
     <div class="hero-section">
       <div class="hero-container">
         <h1 class="hero-title">此為串接政府OpenAPI之 Side Project</h1>
-        <p class="hero-desc">- Noel Hsu 2025/05</p>
+        <p class="hero-desc">- 2025 Noel Hsu</p>
         <a
           class="hero-btn"
           href="https://github.com/noelnoelme/ExecutiveYuanNews-Reader-Project"
           target="_blank"
           >前往 GitHub 了解本專案</a
+        >
+      </div>
+    </div>
+    <div class="hero-section">
+      <div class="hero-container">
+        <h1 class="hero-title">也歡迎到我的個人網站逛逛</h1>
+        <p class="hero-desc"></p>
+        <a class="hero-btn" href="https://noelnoel.me" target="_blank"
+          >傳送門</a
         >
       </div>
     </div>
